--- a/src/components/shared/Header/Header.module.scss
+++ b/src/components/shared/Header/Header.module.scss
@@ -77,8 +77,31 @@
 		display: none;
 
 		@include respond(tab-land) {
+			position: relative;
+
 			display: block;
 			z-index: 9998;
+		}
+
+		&.open .overlay {
+			height: 200vh;
+			opacity: 1;
+		}
+
+		.overlay {
+			position: fixed;
+			display: none;
+			top: 0;
+			left: 0;
+			width: 100vw;
+			height: 0;
+			background-color: rgba(0, 0, 0, 1);
+			opacity: 0;
+			transition: opacity 1s;
+
+			@include respond(tab-land) {
+				display: block;
+			}
 		}
 
 		nav {
@@ -91,11 +114,14 @@
 			top: 0;
 			left: 0;
 			width: 100vw;
-			height: 100vh;
+			height: calc(var(--vh, 1vh) * 100);
+			overflow-y: auto;
 
-			transition: visibility 0.7s ease-in-out, opacity 0.7s ease-in-out;
+			transition: visibility 0.7s ease-in-out, opacity 0.7s ease-in-out,
+				height 0.1s;
 
 			font-size: 6vw;
+			line-height: 1.8;
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
@@ -119,6 +145,7 @@
 			display: block;
 			width: 33px;
 			height: 2px;
+			outline: none;
 
 			&:not(:last-child) {
 				margin-bottom: 7px;
