--- a/src/components/ui/PortfolioCard/PortfolioCard.module.scss
+++ b/src/components/ui/PortfolioCard/PortfolioCard.module.scss
@@ -44,9 +44,9 @@
 		flex-direction: column;
 		justify-content: space-between;
 
-		background-color: rgba($color-black-light, 0.4);
+		background-color: rgba($color-black-light, 0.6);
 		padding: 3rem 3.5rem;
-		backdrop-filter: blur(1rem);
+		// backdrop-filter: blur(1rem);
 
 		border-radius: $border-radius-big;
 
